// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/choice/demo/basic.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        请选择数据分析维度
      </h5>
      <div
        class="ant-choice-description"
      >
        选择最符合您需求的维度
      </div>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="radiogroup"
    >
      <div
        data-key="time"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="clock-circle"
                class="anticon anticon-clock-circle"
                role="img"
                style="color:#1890FF"
              >
                <svg
                  aria-hidden="true"
                  data-icon="clock-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按时间
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按时间趋势分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="region"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="global"
                class="anticon anticon-global"
                role="img"
                style="color:#52C41A"
              >
                <svg
                  aria-hidden="true"
                  data-icon="global"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.4 800.9c.2-.3.5-.6.7-.9C920.6 722.1 960 621.7 960 512s-39.4-210.1-104.8-288c-.2-.3-.5-.5-.7-.8-1.1-1.3-2.1-2.5-3.2-3.7-.4-.5-.8-.9-1.2-1.4l-4.1-4.7-.1-.1c-1.5-1.7-3.1-3.4-4.6-5.1l-.1-.1c-3.2-3.4-6.4-6.8-9.7-10.1l-.1-.1-4.8-4.8-.3-.3c-1.5-1.5-3-2.9-4.5-4.3-.5-.5-1-1-1.6-1.5-1-1-2-1.9-3-2.8-.3-.3-.7-.6-1-1C736.4 109.2 629.5 64 512 64s-224.4 45.2-304.3 119.2c-.3.3-.7.6-1 1-1 .9-2 1.9-3 2.9-.5.5-1 1-1.6 1.5-1.5 1.4-3 2.9-4.5 4.3l-.3.3-4.8 4.8-.1.1c-3.3 3.3-6.5 6.7-9.7 10.1l-.1.1c-1.6 1.7-3.1 3.4-4.6 5.1l-.1.1c-1.4 1.5-2.8 3.1-4.1 4.7-.4.5-.8.9-1.2 1.4-1.1 1.2-2.1 2.5-3.2 3.7-.2.3-.5.5-.7.8C103.4 301.9 64 402.3 64 512s39.4 210.1 104.8 288c.2.3.5.6.7.9l3.1 3.7c.4.5.8.9 1.2 1.4l4.1 4.7c0 .1.1.1.1.2 1.5 1.7 3 3.4 4.6 5l.1.1c3.2 3.4 6.4 6.8 9.6 10.1l.1.1c1.6 1.6 3.1 3.2 4.7 4.7l.3.3c3.3 3.3 6.7 6.5 10.1 9.6 80.1 74 187 119.2 304.5 119.2s224.4-45.2 304.3-119.2a300 300 0 0010-9.6l.3-.3c1.6-1.6 3.2-3.1 4.7-4.7l.1-.1c3.3-3.3 6.5-6.7 9.6-10.1l.1-.1c1.5-1.7 3.1-3.3 4.6-5 0-.1.1-.1.1-.2 1.4-1.5 2.8-3.1 4.1-4.7.4-.5.8-.9 1.2-1.4a99 99 0 003.3-3.7zm4.1-142.6c-13.8 32.6-32 62.8-54.2 90.2a444.07 444.07 0 00-81.5-55.9c11.6-46.9 18.8-98.4 20.7-152.6H887c-3 40.9-12.6 80.6-28.5 118.3zM887 484H743.5c-1.9-54.2-9.1-105.7-20.7-152.6 29.3-15.6 56.6-34.4 81.5-55.9A373.86 373.86 0 01887 484zM658.3 165.5c39.7 16.8 75.8 40 107.6 69.2a394.72 394.72 0 01-59.4 41.8c-15.7-45-35.8-84.1-59.2-115.4 3.7 1.4 7.4 2.9 11 4.4zm-90.6 700.6c-9.2 7.2-18.4 12.7-27.7 16.4V697a389.1 389.1 0 01115.7 26.2c-8.3 24.6-17.9 47.3-29 67.8-17.4 32.4-37.8 58.3-59 75.1zm59-633.1c11 20.6 20.7 43.3 29 67.8A389.1 389.1 0 01540 327V141.6c9.2 3.7 18.5 9.1 27.7 16.4 21.2 16.7 41.6 42.6 59 75zM540 640.9V540h147.5c-1.6 44.2-7.1 87.1-16.3 127.8l-.3 1.2A445.02 445.02 0 00540 640.9zm0-156.9V383.1c45.8-2.8 89.8-12.5 130.9-28.1l.3 1.2c9.2 40.7 14.7 83.5 16.3 127.8H540zm-56 56v100.9c-45.8 2.8-89.8 12.5-130.9 28.1l-.3-1.2c-9.2-40.7-14.7-83.5-16.3-127.8H484zm-147.5-56c1.6-44.2 7.1-87.1 16.3-127.8l.3-1.2c41.1 15.6 85 25.3 130.9 28.1V484H336.5zM484 697v185.4c-9.2-3.7-18.5-9.1-27.7-16.4-21.2-16.7-41.7-42.7-59.1-75.1-11-20.6-20.7-43.3-29-67.8 37.2-14.6 75.9-23.3 115.8-26.1zm0-370a389.1 389.1 0 01-115.7-26.2c8.3-24.6 17.9-47.3 29-67.8 17.4-32.4 37.8-58.4 59.1-75.1 9.2-7.2 18.4-12.7 27.7-16.4V327zM365.7 165.5c3.7-1.5 7.3-3 11-4.4-23.4 31.3-43.5 70.4-59.2 115.4-21-12-40.9-26-59.4-41.8 31.8-29.2 67.9-52.4 107.6-69.2zM165.5 365.7c13.8-32.6 32-62.8 54.2-90.2 24.9 21.5 52.2 40.3 81.5 55.9-11.6 46.9-18.8 98.4-20.7 152.6H137c3-40.9 12.6-80.6 28.5-118.3zM137 540h143.5c1.9 54.2 9.1 105.7 20.7 152.6a444.07 444.07 0 00-81.5 55.9A373.86 373.86 0 01137 540zm228.7 318.5c-39.7-16.8-75.8-40-107.6-69.2 18.5-15.8 38.4-29.7 59.4-41.8 15.7 45 35.8 84.1 59.2 115.4-3.7-1.4-7.4-2.9-11-4.4zm292.6 0c-3.7 1.5-7.3 3-11 4.4 23.4-31.3 43.5-70.4 59.2-115.4 21 12 40.9 26 59.4 41.8a373.81 373.81 0 01-107.6 69.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按地区
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按地域分布分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="category"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="tag"
                class="anticon anticon-tag"
                role="img"
                style="color:#722ED1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="tag"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M938 458.8l-29.6-312.6c-1.5-16.2-14.4-29-30.6-30.6L565.2 86h-.4c-3.2 0-5.7 1-7.6 2.9L88.9 557.2a9.96 9.96 0 000 14.1l363.8 363.8c1.9 1.9 4.4 2.9 7.1 2.9s5.2-1 7.1-2.9l468.3-468.3c2-2.1 3-5 2.8-8zM459.7 834.7L189.3 564.3 589 164.6 836 188l23.4 247-399.7 399.7zM680 256c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm0 120c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按品类
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按商品类别分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="channel"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="appstore"
                class="anticon anticon-appstore"
                role="img"
                style="color:#FA8C16"
              >
                <svg
                  aria-hidden="true"
                  data-icon="appstore"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按渠道
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按销售渠道分析
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/card-layout.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        推荐方案
      </h5>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-card"
      data-role="group"
    >
      <div
        data-key="performance"
      >
        <div
          class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-primary"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="rocket"
                class="anticon anticon-rocket"
                role="img"
                style="color:#722ED1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="rocket"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M864 736c0-111.6-65.4-208-160-252.9V317.3c0-15.1-5.3-29.7-15.1-41.2L536.5 95.4C530.1 87.8 521 84 512 84s-18.1 3.8-24.5 11.4L335.1 276.1a63.97 63.97 0 00-15.1 41.2v165.8C225.4 528 160 624.4 160 736h156.5c-2.3 7.2-3.5 15-3.5 23.8 0 22.1 7.6 43.7 21.4 60.8a97.2 97.2 0 0043.1 30.6c23.1 54 75.6 88.8 134.5 88.8 29.1 0 57.3-8.6 81.4-24.8 23.6-15.8 41.9-37.9 53-64a97 97 0 0043.1-30.5 97.52 97.52 0 0021.4-60.8c0-8.4-1.1-16.4-3.1-23.8H864zM762.3 621.4c9.4 14.6 17 30.3 22.5 46.6H700V558.7a211.6 211.6 0 0162.3 62.7zM388 483.1V318.8l124-147 124 147V668H388V483.1zM239.2 668c5.5-16.3 13.1-32 22.5-46.6 16.3-25.2 37.5-46.5 62.3-62.7V668h-84.8zm388.9 116.2c-5.2 3-11.2 4.2-17.1 3.4l-19.5-2.4-2.8 19.4c-5.4 37.9-38.4 66.5-76.7 66.5-38.3 0-71.3-28.6-76.7-66.5l-2.8-19.5-19.5 2.5a27.7 27.7 0 01-17.1-3.5c-8.7-5-14.1-14.3-14.1-24.4 0-10.6 5.9-19.4 14.6-23.8h231.3c8.8 4.5 14.6 13.3 14.6 23.8-.1 10.2-5.5 19.6-14.2 24.5zM464 400a48 48 0 1096 0 48 48 0 10-96 0z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              性能优化
            </div>
            <div
              class="ant-choice-item-desc"
            >
              提升系统响应速度和吞吐量
            </div>
          </div>
          <div
            class="ant-choice-item-recommend-badge"
          >
            AI 评分: 92
          </div>
        </div>
      </div>
      <div
        data-key="security"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="safety-certificate"
                class="anticon anticon-safety-certificate"
                role="img"
                style="color:#52C41A"
              >
                <svg
                  aria-hidden="true"
                  data-icon="safety-certificate"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M866.9 169.9L527.1 54.1C523 52.7 517.5 52 512 52s-11 .7-15.1 2.1L157.1 169.9c-8.3 2.8-15.1 12.4-15.1 21.2v482.4c0 8.8 5.7 20.4 12.6 25.9L499.3 968c3.5 2.7 8 4.1 12.6 4.1s9.2-1.4 12.6-4.1l344.7-268.6c6.9-5.4 12.6-17 12.6-25.9V191.1c.2-8.8-6.6-18.3-14.9-21.2zM810 654.3L512 886.5 214 654.3V226.7l298-101.6 298 101.6v427.6zm-405.8-201c-3-4.1-7.8-6.6-13-6.6H336c-6.5 0-10.3 7.4-6.5 12.7l126.4 174a16.1 16.1 0 0026 0l212.6-292.7c3.8-5.3 0-12.7-6.5-12.7h-55.2c-5.1 0-10 2.5-13 6.6L468.9 542.4l-64.7-89.1z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              安全加固
            </div>
            <div
              class="ant-choice-item-desc"
            >
              修复已知漏洞，增强安全策略
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="feature"
      >
        <div
          class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-secondary"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="fire"
                class="anticon anticon-fire"
                role="img"
                style="color:#FA541C"
              >
                <svg
                  aria-hidden="true"
                  data-icon="fire"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M834.1 469.2A347.49 347.49 0 00751.2 354l-29.1-26.7a8.09 8.09 0 00-13 3.3l-13 37.3c-8.1 23.4-23 47.3-44.1 70.8-1.4 1.5-3 1.9-4.1 2-1.1.1-2.8-.1-4.3-1.5-1.4-1.2-2.1-3-2-4.8 3.7-60.2-14.3-128.1-53.7-202C555.3 171 510 123.1 453.4 89.7l-41.3-24.3c-5.4-3.2-12.3 1-12 7.3l2.2 48c1.5 32.8-2.3 61.8-11.3 85.9-11 29.5-26.8 56.9-47 81.5a295.64 295.64 0 01-47.5 46.1 352.6 352.6 0 00-100.3 121.5A347.75 347.75 0 00160 610c0 47.2 9.3 92.9 27.7 136a349.4 349.4 0 0075.5 110.9c32.4 32 70 57.2 111.9 74.7C418.5 949.8 464.5 959 512 959s93.5-9.2 136.9-27.3A348.6 348.6 0 00760.8 857c32.4-32 57.8-69.4 75.5-110.9a344.2 344.2 0 0027.7-136c0-48.8-10-96.2-29.9-140.9zM713 808.5c-53.7 53.2-125 82.4-201 82.4s-147.3-29.2-201-82.4c-53.5-53.1-83-123.5-83-198.4 0-43.5 9.8-85.2 29.1-124 18.8-37.9 46.8-71.8 80.8-97.9a349.6 349.6 0 0058.6-56.8c25-30.5 44.6-64.5 58.2-101a240 240 0 0012.1-46.5c24.1 22.2 44.3 49 61.2 80.4 33.4 62.6 48.8 118.3 45.8 165.7a74.01 74.01 0 0024.4 59.8 73.36 73.36 0 0053.4 18.8c19.7-1 37.8-9.7 51-24.4 13.3-14.9 24.8-30.1 34.4-45.6 14 17.9 25.7 37.4 35 58.4 15.9 35.8 24 73.9 24 113.1 0 74.9-29.5 145.4-83 198.4z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              功能迭代
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按需求优先级推进新功能
            </div>
          </div>
          <div
            class="ant-choice-item-recommend-badge ant-choice-item-recommend-badge-secondary"
          >
            Recommended
          </div>
        </div>
      </div>
      <div
        data-key="debt"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="tool"
                class="anticon anticon-tool"
                role="img"
                style="color:#8C8C8C"
              >
                <svg
                  aria-hidden="true"
                  data-icon="tool"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M876.6 239.5c-.5-.9-1.2-1.8-2-2.5-5-5-13.1-5-18.1 0L684.2 409.3l-67.9-67.9L788.7 169c.8-.8 1.4-1.6 2-2.5 3.6-6.1 1.6-13.9-4.5-17.5-98.2-58-226.8-44.7-311.3 39.7-67 67-89.2 162-66.5 247.4l-293 293c-3 3-2.8 7.9.3 11l169.7 169.7c3.1 3.1 8.1 3.3 11 .3l292.9-292.9c85.5 22.8 180.5.7 247.6-66.4 84.4-84.5 97.7-213.1 39.7-311.3zM786 499.8c-58.1 58.1-145.3 69.3-214.6 33.6l-8.8 8.8-.1-.1-274 274.1-79.2-79.2 230.1-230.1s0 .1.1.1l52.8-52.8c-35.7-69.3-24.5-156.5 33.6-214.6a184.2 184.2 0 01144-53.5L537 318.9a32.05 32.05 0 000 45.3l124.5 124.5a32.05 32.05 0 0045.3 0l132.8-132.8c3.7 51.8-14.4 104.8-53.6 143.9z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              技术债清理
            </div>
            <div
              class="ant-choice-item-desc"
            >
              重构遗留代码，改善可维护性
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/confirmable.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        下一步您希望如何继续？
      </h5>
      <div
        class="ant-choice-description"
      >
        诊断完成，以下是建议的后续步骤
      </div>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="group"
    >
      <div
        data-key="detail"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              查看详细报告
            </div>
            <div
              class="ant-choice-item-desc"
            >
              查看完整的分析报告
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="fix"
      >
        <div
          class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-primary"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              立即修复
            </div>
            <div
              class="ant-choice-item-desc"
            >
              自动修复检测到的问题
            </div>
          </div>
          <div
            class="ant-choice-item-recommend-badge"
          >
            检测到 3 个高危问题
          </div>
        </div>
      </div>
      <div
        data-key="schedule"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              加入排期
            </div>
            <div
              class="ant-choice-item-desc"
            >
              加入后续冲刺排期
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="ignore"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              暂时忽略
            </div>
            <div
              class="ant-choice-item-desc"
            >
              跳过本次处理
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-choice-footer"
    >
      <span
        class="ant-choice-footer-count"
      >
        0/2
      </span>
      <button
        class="ant-btn css-var-_R_0_ ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
        disabled=""
        type="button"
      >
        <span>
          确认选择
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/controlled.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        受控模式
      </h5>
      <div
        class="ant-choice-description"
      >
        当前选中值由外部 state 控制
      </div>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="radiogroup"
    >
      <div
        data-key="1"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              选项 A
            </div>
            <div
              class="ant-choice-item-desc"
            >
              描述 A
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="2"
      >
        <div
          class="ant-choice-item ant-choice-item-selected"
          data-role="radio"
          data-selected="true"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper ant-radio-wrapper-checked css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target ant-radio-checked"
              >
                <input
                  checked=""
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              选项 B
            </div>
            <div
              class="ant-choice-item-desc"
            >
              描述 B
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="3"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              选项 C
            </div>
            <div
              class="ant-choice-item-desc"
            >
              描述 C
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/disabled.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        请选择数据分析维度
      </h5>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="radiogroup"
    >
      <div
        data-key="time"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              按时间
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按时间趋势分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="channel"
      >
        <div
          class="ant-choice-item ant-choice-item-disabled"
          data-disabled="true"
          data-role="radio"
          data-selected="false"
          tabindex="-1"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper ant-radio-wrapper-disabled css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target ant-radio-disabled"
              >
                <input
                  class="ant-radio-input"
                  disabled=""
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              按渠道
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按销售渠道分析
            </div>
          </div>
          <div
            class="ant-choice-item-disabled-reason"
          >
            当前冲刺无排期
          </div>
        </div>
      </div>
      <div
        data-key="region"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              按地区
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按地域分布分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="manual"
      >
        <div
          class="ant-choice-item ant-choice-item-disabled"
          data-disabled="true"
          data-role="radio"
          data-selected="false"
          tabindex="-1"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper ant-radio-wrapper-disabled css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target ant-radio-disabled"
              >
                <input
                  class="ant-radio-input"
                  disabled=""
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              手动配置
            </div>
            <div
              class="ant-choice-item-desc"
            >
              自定义分析维度
            </div>
          </div>
          <div
            class="ant-choice-item-disabled-reason"
          >
            需要管理员权限
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/grid-layout.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        选择您感兴趣的方向
      </h5>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-grid"
      data-role="radiogroup"
    >
      <div
        data-key="time"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="clock-circle"
                class="anticon anticon-clock-circle"
                role="img"
                style="color:#1890FF"
              >
                <svg
                  aria-hidden="true"
                  data-icon="clock-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M686.7 638.6L544.1 535.5V288c0-4.4-3.6-8-8-8H488c-4.4 0-8 3.6-8 8v275.4c0 2.6 1.2 5 3.3 6.5l165.4 120.6c3.6 2.6 8.6 1.8 11.2-1.7l28.6-39c2.6-3.7 1.8-8.7-1.8-11.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按时间
            </div>
            <div
              class="ant-choice-item-desc"
            >
              趋势分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="region"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="global"
                class="anticon anticon-global"
                role="img"
                style="color:#52C41A"
              >
                <svg
                  aria-hidden="true"
                  data-icon="global"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M854.4 800.9c.2-.3.5-.6.7-.9C920.6 722.1 960 621.7 960 512s-39.4-210.1-104.8-288c-.2-.3-.5-.5-.7-.8-1.1-1.3-2.1-2.5-3.2-3.7-.4-.5-.8-.9-1.2-1.4l-4.1-4.7-.1-.1c-1.5-1.7-3.1-3.4-4.6-5.1l-.1-.1c-3.2-3.4-6.4-6.8-9.7-10.1l-.1-.1-4.8-4.8-.3-.3c-1.5-1.5-3-2.9-4.5-4.3-.5-.5-1-1-1.6-1.5-1-1-2-1.9-3-2.8-.3-.3-.7-.6-1-1C736.4 109.2 629.5 64 512 64s-224.4 45.2-304.3 119.2c-.3.3-.7.6-1 1-1 .9-2 1.9-3 2.9-.5.5-1 1-1.6 1.5-1.5 1.4-3 2.9-4.5 4.3l-.3.3-4.8 4.8-.1.1c-3.3 3.3-6.5 6.7-9.7 10.1l-.1.1c-1.6 1.7-3.1 3.4-4.6 5.1l-.1.1c-1.4 1.5-2.8 3.1-4.1 4.7-.4.5-.8.9-1.2 1.4-1.1 1.2-2.1 2.5-3.2 3.7-.2.3-.5.5-.7.8C103.4 301.9 64 402.3 64 512s39.4 210.1 104.8 288c.2.3.5.6.7.9l3.1 3.7c.4.5.8.9 1.2 1.4l4.1 4.7c0 .1.1.1.1.2 1.5 1.7 3 3.4 4.6 5l.1.1c3.2 3.4 6.4 6.8 9.6 10.1l.1.1c1.6 1.6 3.1 3.2 4.7 4.7l.3.3c3.3 3.3 6.7 6.5 10.1 9.6 80.1 74 187 119.2 304.5 119.2s224.4-45.2 304.3-119.2a300 300 0 0010-9.6l.3-.3c1.6-1.6 3.2-3.1 4.7-4.7l.1-.1c3.3-3.3 6.5-6.7 9.6-10.1l.1-.1c1.5-1.7 3.1-3.3 4.6-5 0-.1.1-.1.1-.2 1.4-1.5 2.8-3.1 4.1-4.7.4-.5.8-.9 1.2-1.4a99 99 0 003.3-3.7zm4.1-142.6c-13.8 32.6-32 62.8-54.2 90.2a444.07 444.07 0 00-81.5-55.9c11.6-46.9 18.8-98.4 20.7-152.6H887c-3 40.9-12.6 80.6-28.5 118.3zM887 484H743.5c-1.9-54.2-9.1-105.7-20.7-152.6 29.3-15.6 56.6-34.4 81.5-55.9A373.86 373.86 0 01887 484zM658.3 165.5c39.7 16.8 75.8 40 107.6 69.2a394.72 394.72 0 01-59.4 41.8c-15.7-45-35.8-84.1-59.2-115.4 3.7 1.4 7.4 2.9 11 4.4zm-90.6 700.6c-9.2 7.2-18.4 12.7-27.7 16.4V697a389.1 389.1 0 01115.7 26.2c-8.3 24.6-17.9 47.3-29 67.8-17.4 32.4-37.8 58.3-59 75.1zm59-633.1c11 20.6 20.7 43.3 29 67.8A389.1 389.1 0 01540 327V141.6c9.2 3.7 18.5 9.1 27.7 16.4 21.2 16.7 41.6 42.6 59 75zM540 640.9V540h147.5c-1.6 44.2-7.1 87.1-16.3 127.8l-.3 1.2A445.02 445.02 0 00540 640.9zm0-156.9V383.1c45.8-2.8 89.8-12.5 130.9-28.1l.3 1.2c9.2 40.7 14.7 83.5 16.3 127.8H540zm-56 56v100.9c-45.8 2.8-89.8 12.5-130.9 28.1l-.3-1.2c-9.2-40.7-14.7-83.5-16.3-127.8H484zm-147.5-56c1.6-44.2 7.1-87.1 16.3-127.8l.3-1.2c41.1 15.6 85 25.3 130.9 28.1V484H336.5zM484 697v185.4c-9.2-3.7-18.5-9.1-27.7-16.4-21.2-16.7-41.7-42.7-59.1-75.1-11-20.6-20.7-43.3-29-67.8 37.2-14.6 75.9-23.3 115.8-26.1zm0-370a389.1 389.1 0 01-115.7-26.2c8.3-24.6 17.9-47.3 29-67.8 17.4-32.4 37.8-58.4 59.1-75.1 9.2-7.2 18.4-12.7 27.7-16.4V327zM365.7 165.5c3.7-1.5 7.3-3 11-4.4-23.4 31.3-43.5 70.4-59.2 115.4-21-12-40.9-26-59.4-41.8 31.8-29.2 67.9-52.4 107.6-69.2zM165.5 365.7c13.8-32.6 32-62.8 54.2-90.2 24.9 21.5 52.2 40.3 81.5 55.9-11.6 46.9-18.8 98.4-20.7 152.6H137c3-40.9 12.6-80.6 28.5-118.3zM137 540h143.5c1.9 54.2 9.1 105.7 20.7 152.6a444.07 444.07 0 00-81.5 55.9A373.86 373.86 0 01137 540zm228.7 318.5c-39.7-16.8-75.8-40-107.6-69.2 18.5-15.8 38.4-29.7 59.4-41.8 15.7 45 35.8 84.1 59.2 115.4-3.7-1.4-7.4-2.9-11-4.4zm292.6 0c-3.7 1.5-7.3 3-11 4.4 23.4-31.3 43.5-70.4 59.2-115.4 21 12 40.9 26 59.4 41.8a373.81 373.81 0 01-107.6 69.2z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按地区
            </div>
            <div
              class="ant-choice-item-desc"
            >
              地域分布
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="category"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="tag"
                class="anticon anticon-tag"
                role="img"
                style="color:#722ED1"
              >
                <svg
                  aria-hidden="true"
                  data-icon="tag"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M938 458.8l-29.6-312.6c-1.5-16.2-14.4-29-30.6-30.6L565.2 86h-.4c-3.2 0-5.7 1-7.6 2.9L88.9 557.2a9.96 9.96 0 000 14.1l363.8 363.8c1.9 1.9 4.4 2.9 7.1 2.9s5.2-1 7.1-2.9l468.3-468.3c2-2.1 3-5 2.8-8zM459.7 834.7L189.3 564.3 589 164.6 836 188l23.4 247-399.7 399.7zM680 256c-48.5 0-88 39.5-88 88s39.5 88 88 88 88-39.5 88-88-39.5-88-88-88zm0 120c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按品类
            </div>
            <div
              class="ant-choice-item-desc"
            >
              类别分析
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="channel"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-icon"
            >
              <span
                aria-label="appstore"
                class="anticon anticon-appstore"
                role="img"
                style="color:#FA8C16"
              >
                <svg
                  aria-hidden="true"
                  data-icon="appstore"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M464 144H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H212V212h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V160c0-8.8-7.2-16-16-16zm-52 268H612V212h200v200zM464 544H160c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H212V612h200v200zm452-268H560c-8.8 0-16 7.2-16 16v304c0 8.8 7.2 16 16 16h304c8.8 0 16-7.2 16-16V560c0-8.8-7.2-16-16-16zm-52 268H612V612h200v200z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ant-choice-item-label"
            >
              按渠道
            </div>
            <div
              class="ant-choice-item-desc"
            >
              渠道分析
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/in-bubble.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-bubble-list css-var-_R_0_"
  >
    <div
      class="ant-bubble-list-scroll-box ant-bubble-list-autoscroll"
    >
      <div
        class="ant-bubble-list-scroll-content"
      >
        <div
          class="ant-bubble css-var-_R_0_ ant-bubble-start"
        >
          <div
            class="ant-bubble-body"
          >
            <div
              class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default ant-bubble-content-string"
            >
              我已完成文档处理，接下来您希望如何继续？
            </div>
          </div>
        </div>
        <div
          class="ant-bubble css-var-_R_0_ ant-bubble-start"
        >
          <div
            class="ant-bubble-body"
          >
            <div
              class="ant-bubble-content ant-bubble-content-filled ant-bubble-content-default"
            >
              <div
                class="ant-choice css-var-_R_0_"
              >
                <div
                  class="ant-choice-header"
                >
                  <h5
                    class="ant-typography ant-choice-title css-var-_R_0_"
                  >
                    请选择后续操作
                  </h5>
                </div>
                <div
                  class="ant-choice-list ant-choice-layout-list"
                  data-role="radiogroup"
                >
                  <div
                    data-key="summary"
                  >
                    <div
                      class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-primary"
                      data-role="radio"
                      data-selected="false"
                      tabindex="0"
                    >
                      <span
                        class="ant-choice-indicator"
                      >
                        <label
                          class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                        >
                          <span
                            class="ant-radio ant-wave-target"
                          >
                            <input
                              class="ant-radio-input"
                              type="radio"
                            />
                          </span>
                        </label>
                      </span>
                      <div
                        class="ant-choice-item-content"
                      >
                        <div
                          class="ant-choice-item-label"
                        >
                          生成摘要
                        </div>
                        <div
                          class="ant-choice-item-desc"
                        >
                          提取关键信息生成摘要
                        </div>
                      </div>
                      <div
                        class="ant-choice-item-recommend-badge"
                      >
                        AI Recommended
                      </div>
                    </div>
                  </div>
                  <div
                    data-key="translate"
                  >
                    <div
                      class="ant-choice-item"
                      data-role="radio"
                      data-selected="false"
                      tabindex="0"
                    >
                      <span
                        class="ant-choice-indicator"
                      >
                        <label
                          class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                        >
                          <span
                            class="ant-radio ant-wave-target"
                          >
                            <input
                              class="ant-radio-input"
                              type="radio"
                            />
                          </span>
                        </label>
                      </span>
                      <div
                        class="ant-choice-item-content"
                      >
                        <div
                          class="ant-choice-item-label"
                        >
                          翻译全文
                        </div>
                        <div
                          class="ant-choice-item-desc"
                        >
                          将内容翻译为目标语言
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    data-key="analyze"
                  >
                    <div
                      class="ant-choice-item"
                      data-role="radio"
                      data-selected="false"
                      tabindex="0"
                    >
                      <span
                        class="ant-choice-indicator"
                      >
                        <label
                          class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                        >
                          <span
                            class="ant-radio ant-wave-target"
                          >
                            <input
                              class="ant-radio-input"
                              type="radio"
                            />
                          </span>
                        </label>
                      </span>
                      <div
                        class="ant-choice-item-content"
                      >
                        <div
                          class="ant-choice-item-label"
                        >
                          深度分析
                        </div>
                        <div
                          class="ant-choice-item-desc"
                        >
                          对内容进行深度结构化分析
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/indicator.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-space ant-space-vertical ant-space-gap-row-large ant-space-gap-col-large css-var-_R_0_"
    style="width:100%"
  >
    <div
      class="ant-space-item"
    >
      <div
        class="ant-choice css-var-_R_0_"
      >
        <div
          class="ant-choice-header"
        >
          <h5
            class="ant-typography ant-choice-title css-var-_R_0_"
          >
            indicator: radio (默认单选)
          </h5>
        </div>
        <div
          class="ant-choice-list ant-choice-layout-list"
          data-role="radiogroup"
        >
          <div
            data-key="1"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <label
                  class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                >
                  <span
                    class="ant-radio ant-wave-target"
                  >
                    <input
                      class="ant-radio-input"
                      type="radio"
                    />
                  </span>
                </label>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 A
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 A
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="2"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <label
                  class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                >
                  <span
                    class="ant-radio ant-wave-target"
                  >
                    <input
                      class="ant-radio-input"
                      type="radio"
                    />
                  </span>
                </label>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 B
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 B
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="3"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <label
                  class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
                >
                  <span
                    class="ant-radio ant-wave-target"
                  >
                    <input
                      class="ant-radio-input"
                      type="radio"
                    />
                  </span>
                </label>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 C
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 C
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-choice css-var-_R_0_"
      >
        <div
          class="ant-choice-header"
        >
          <h5
            class="ant-typography ant-choice-title css-var-_R_0_"
          >
            indicator: check
          </h5>
        </div>
        <div
          class="ant-choice-list ant-choice-layout-list"
          data-role="group"
        >
          <div
            data-key="1"
          >
            <div
              class="ant-choice-item"
              data-role="checkbox"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              />
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 A
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 A
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="2"
          >
            <div
              class="ant-choice-item"
              data-role="checkbox"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              />
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 B
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 B
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="3"
          >
            <div
              class="ant-choice-item"
              data-role="checkbox"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              />
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 C
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 C
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-choice css-var-_R_0_"
      >
        <div
          class="ant-choice-header"
        >
          <h5
            class="ant-typography ant-choice-title css-var-_R_0_"
          >
            indicator: number
          </h5>
        </div>
        <div
          class="ant-choice-list ant-choice-layout-list"
          data-role="radiogroup"
        >
          <div
            data-key="1"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <span
                  class="ant-choice-indicator-number"
                >
                  1
                </span>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 A
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 A
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="2"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <span
                  class="ant-choice-indicator-number"
                >
                  2
                </span>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 B
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 B
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="3"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <span
                class="ant-choice-indicator"
              >
                <span
                  class="ant-choice-indicator-number"
                >
                  3
                </span>
              </span>
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 C
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 C
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space-item"
    >
      <div
        class="ant-choice css-var-_R_0_"
      >
        <div
          class="ant-choice-header"
        >
          <h5
            class="ant-typography ant-choice-title css-var-_R_0_"
          >
            indicator: none
          </h5>
        </div>
        <div
          class="ant-choice-list ant-choice-layout-list"
          data-role="radiogroup"
        >
          <div
            data-key="1"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 A
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 A
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="2"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 B
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 B
                </div>
              </div>
            </div>
          </div>
          <div
            data-key="3"
          >
            <div
              class="ant-choice-item"
              data-role="radio"
              data-selected="false"
              tabindex="0"
            >
              <div
                class="ant-choice-item-content"
              >
                <div
                  class="ant-choice-item-label"
                >
                  选项 C
                </div>
                <div
                  class="ant-choice-item-desc"
                >
                  描述 C
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/loading.tsx correctly 1`] = `
<div
  class="ant-choice css-var-_R_0_"
>
  <div
    class="ant-choice-header"
  >
    <h5
      class="ant-typography ant-choice-title css-var-_R_0_"
    >
      正在加载选项...
    </h5>
    <div
      class="ant-choice-description"
    >
      请稍候
    </div>
  </div>
  <div
    class="ant-choice-list ant-choice-layout-list"
    data-role="radiogroup"
  >
    <div
      class="ant-choice-loading"
    >
      <div
        class="ant-skeleton ant-skeleton-active css-var-_R_0_"
      >
        <div
          class="ant-skeleton-section"
        >
          <h3
            class="ant-skeleton-title"
            style="width:38%"
          />
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li
              style="width:61%"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/multiple.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        选择优化方向（最多 2 项）
      </h5>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="group"
    >
      <div
        data-key="performance"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              性能优化
            </div>
            <div
              class="ant-choice-item-desc"
            >
              提升系统响应速度和吞吐量
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="security"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              安全加固
            </div>
            <div
              class="ant-choice-item-desc"
            >
              修复已知漏洞，增强安全策略
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="feature"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              功能迭代
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按需求优先级推进新功能
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="debt"
      >
        <div
          class="ant-choice-item"
          data-role="checkbox"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          />
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              技术债清理
            </div>
            <div
              class="ant-choice-item-desc"
            >
              重构遗留代码，改善可维护性
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders components/choice/demo/recommended.tsx correctly 1`] = `
<div
  class="ant-app css-var-_R_0_"
>
  <div
    class="ant-choice css-var-_R_0_"
  >
    <div
      class="ant-choice-header"
    >
      <h5
        class="ant-typography ant-choice-title css-var-_R_0_"
      >
        推荐方案
      </h5>
    </div>
    <div
      class="ant-choice-list ant-choice-layout-list"
      data-role="radiogroup"
    >
      <div
        data-key="performance"
      >
        <div
          class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-primary"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              性能优化
            </div>
            <div
              class="ant-choice-item-desc"
            >
              提升系统响应速度和吞吐量
            </div>
          </div>
          <div
            class="ant-choice-item-recommend-badge"
          >
            AI 评分: 92
          </div>
        </div>
      </div>
      <div
        data-key="security"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              安全加固
            </div>
            <div
              class="ant-choice-item-desc"
            >
              修复已知漏洞，增强安全策略
            </div>
          </div>
        </div>
      </div>
      <div
        data-key="feature"
      >
        <div
          class="ant-choice-item ant-choice-item-recommended ant-choice-item-recommended-secondary"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              功能迭代
            </div>
            <div
              class="ant-choice-item-desc"
            >
              按需求优先级推进新功能
            </div>
          </div>
          <div
            class="ant-choice-item-recommend-badge ant-choice-item-recommend-badge-secondary"
          >
            次级推荐
          </div>
        </div>
      </div>
      <div
        data-key="debt"
      >
        <div
          class="ant-choice-item"
          data-role="radio"
          data-selected="false"
          tabindex="0"
        >
          <span
            class="ant-choice-indicator"
          >
            <label
              class="ant-radio-wrapper css-var-_R_0_ ant-radio-css-var"
            >
              <span
                class="ant-radio ant-wave-target"
              >
                <input
                  class="ant-radio-input"
                  type="radio"
                />
              </span>
            </label>
          </span>
          <div
            class="ant-choice-item-content"
          >
            <div
              class="ant-choice-item-label"
            >
              技术债清理
            </div>
            <div
              class="ant-choice-item-desc"
            >
              重构遗留代码，改善可维护性
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
